// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prices.utils fetchPrices request prices for contracts returns a price map of requested token prices in usd 1`] = `
Object {
  "0x2B5455aac8d64C14786c3a29858E43b5945819C0": Object {
    "usd": 43500,
  },
  "0x3472A5A71965499acd81997a54BBA8D852C6E53d": Object {
    "usd": 10,
  },
}
`;

exports[`prices.utils fetchPrices request prices for look up names returns a price map of requested token prices in usd 1`] = `
Object {
  "badger": Object {
    "usd": 10,
  },
  "wrapped-bitcoin": Object {
    "usd": 43500,
  },
}
`;
